--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,7 +107,7 @@
                 android:layout_height="?android:attr/actionBarSize"
                 android:orientation="horizontal">
 
-                <LinearLayout
+                <FrameLayout
                     android:layout_width="0sp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -124,7 +124,14 @@
                         tools:ignore="ContentDescription"
                         android:id="@+id/button_tests_list"/>
 
-                </LinearLayout>
+                    <ImageView
+                        android:id="@+id/highlight_tests"
+                        android:layout_width="match_parent"
+                        android:layout_height="5sp"
+                        android:layout_gravity="bottom"
+                        tools:ignore="ContentDescription,SmallSp" />
+
+                </FrameLayout>
 
                 <ImageView
                     android:layout_width="1sp"
@@ -132,7 +139,7 @@
                     android:background="@color/colorTextFive"
                     tools:ignore="ContentDescription,SmallSp" />
 
-                <LinearLayout
+                <FrameLayout
                     android:layout_width="0sp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -149,7 +156,14 @@
                         tools:ignore="ContentDescription"
                         android:id="@+id/button_sensors_list"/>
 
-                </LinearLayout>
+                    <ImageView
+                        android:id="@+id/highlight_sensors"
+                        android:layout_width="match_parent"
+                        android:layout_height="5sp"
+                        android:layout_gravity="bottom"
+                        tools:ignore="ContentDescription,SmallSp" />
+
+                </FrameLayout>
 
                 <ImageView
                     android:layout_width="1sp"
@@ -157,7 +171,7 @@
                     android:background="@color/colorTextFive"
                     tools:ignore="ContentDescription,SmallSp" />
 
-                <LinearLayout
+                <FrameLayout
                     android:layout_width="0sp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -174,7 +188,14 @@
                         tools:ignore="ContentDescription"
                         android:id="@+id/button_features_list"/>
 
-                </LinearLayout>
+                    <ImageView
+                        android:id="@+id/highlight_features"
+                        android:layout_width="match_parent"
+                        android:layout_height="5sp"
+                        android:layout_gravity="bottom"
+                        tools:ignore="ContentDescription,SmallSp" />
+
+                </FrameLayout>
 
                 <ImageView
                     android:layout_width="1sp"
@@ -182,7 +203,7 @@
                     android:background="@color/colorTextFive"
                     tools:ignore="ContentDescription,SmallSp" />
 
-                <LinearLayout
+                <FrameLayout
                     android:layout_width="0sp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -197,9 +218,17 @@
                         android:scaleType="centerInside"
                         android:padding="10sp"
                         tools:ignore="ContentDescription"
-                        android:id="@+id/button_rate_experience"/>
+                        android:id="@+id/button_rate_experience"
+                        android:layout_marginBottom="5sp"/>
 
-                </LinearLayout>
+                    <ImageView
+                        android:id="@+id/highlight_rate"
+                        android:layout_width="match_parent"
+                        android:layout_height="5sp"
+                        android:layout_gravity="bottom"
+                        tools:ignore="ContentDescription,SmallSp" />
+
+                </FrameLayout>
 
             </LinearLayout>
 
