--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,16 +83,30 @@
                 android:layout_height="wrap_content"
                 app:cardBackgroundColor="@color/colorPrimaryDark">
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <TextSwitcher
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:textColor="@color/white"
-                    android:text="@string/showing_sensors_list"
-                    android:paddingTop="5sp"
-                    android:paddingBottom="5sp"
-                    android:textSize="20sp"
-                    android:id="@+id/header"/>
+                    android:id="@+id/header_text">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textColor="@color/white"
+                        android:gravity="center"
+                        android:paddingTop="5sp"
+                        android:paddingBottom="5sp"
+                        android:textSize="20sp"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textColor="@color/white"
+                        android:gravity="center"
+                        android:paddingTop="5sp"
+                        android:paddingBottom="5sp"
+                        android:textSize="20sp"/>
+
+                </TextSwitcher>
 
             </android.support.v7.widget.CardView>
 
@@ -118,7 +132,7 @@
                         android:layout_height="match_parent"
                         android:tint="@color/colorPrimaryDark"
                         android:src="@drawable/baseline_device_unknown_black_48"
-                        android:background="?android:attr/selectableItemBackground"
+                        android:background="@color/white"
                         android:scaleType="centerInside"
                         android:padding="10sp"
                         tools:ignore="ContentDescription"
@@ -150,7 +164,7 @@
                         android:layout_height="match_parent"
                         android:tint="@color/colorPrimaryDark"
                         android:src="@drawable/baseline_mobile_friendly_black_48"
-                        android:background="?android:attr/selectableItemBackground"
+                        android:background="@color/white"
                         android:scaleType="centerInside"
                         android:padding="10sp"
                         tools:ignore="ContentDescription"
@@ -182,7 +196,7 @@
                         android:layout_height="match_parent"
                         android:tint="@color/colorPrimaryDark"
                         android:src="@drawable/baseline_battery_charging_full_black_48"
-                        android:background="?android:attr/selectableItemBackground"
+                        android:background="@color/white"
                         android:scaleType="centerInside"
                         android:padding="10sp"
                         tools:ignore="ContentDescription"
@@ -214,7 +228,7 @@
                         android:layout_height="match_parent"
                         android:tint="@color/colorPrimaryDark"
                         android:src="@drawable/baseline_verified_user_black_48"
-                        android:background="?android:attr/selectableItemBackground"
+                        android:background="@color/white"
                         android:scaleType="centerInside"
                         android:padding="10sp"
                         tools:ignore="ContentDescription"
