--- a/app/src/main/res/layout/activity_accelerometer_test.xml
+++ b/app/src/main/res/layout/activity_accelerometer_test.xml
@@ -6,7 +6,7 @@
     android:id="@+id/view">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/data_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
