--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -28,7 +28,7 @@ android:layout_height="match_parent">
             android:fontFamily="sans-serif-smallcaps"
             android:textSize="20sp"
             android:layout_weight="1"
-            android:id="@+id/textView"
+            android:id="@+id/data_name"
             android:textStyle="normal|bold" />
 
     </android.support.v7.widget.Toolbar>
