--- a/app/src/main/res/layout/activity_motion_detect.xml
+++ b/app/src/main/res/layout/activity_motion_detect.xml
@@ -48,7 +48,7 @@
             app:cardElevation="@dimen/app_bar_elevation">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/data_drawable"
                 android:padding="10sp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
@@ -66,7 +66,7 @@
             app:cardElevation="@dimen/app_bar_elevation">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/data_name"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:elevation="@dimen/app_bar_elevation"
