removed textSwitcher previous text visible bug

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,12 +10,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
+        <!-- the fame layout below is just for bottom margin: 30 + actionBarSize -->
+
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/recycler">
+            android:layout_marginTop="5sp"
+            android:layout_marginBottom="35sp">
 
-        </android.support.v7.widget.RecyclerView>
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="?attr/actionBarSize"
+                android:layout_marginBottom="?attr/actionBarSize"
+                android:id="@+id/recycler">
+
+            </android.support.v7.widget.RecyclerView>
+
+        </FrameLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
