--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,8 +15,51 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="5sp"
             android:layout_marginBottom="35sp">
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardBackgroundColor="@color/red_shade_three"
+                android:layout_marginTop="75sp"
+                android:layout_marginLeft="10sp"
+                android:layout_marginRight="10sp"
+                app:cardCornerRadius="10sp"
+                android:id="@+id/card_permissions">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="0sp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textColor="@color/white"
+                        android:textSize="15sp"
+                        android:paddingLeft="15sp"
+                        android:paddingTop="5sp"
+                        android:paddingBottom="5sp"
+                        android:text="@string/please_give_permissions"
+                        android:layout_gravity="center_vertical"
+                        tools:ignore="RtlHardcoded,RtlSymmetry" />
+
+                    <ImageButton
+                        android:layout_width="40sp"
+                        android:layout_height="40sp"
+                        android:src="@drawable/baseline_disc_full_black_48"
+                        android:tint="@color/white"
+                        tools:ignore="ContentDescription"
+                        android:background="@color/transparent"
+                        android:padding="5sp"
+                        android:scaleType="centerInside"
+                        android:layout_gravity="center_vertical"/>
+
+                </LinearLayout>
+
+
+            </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
