Refactored MainActivity (before contained list of sensors) to fragment container (of ListFragment)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,300 +8,8 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <!-- the fame layout below is just for bottom margin: 30 + actionBarSize -->
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="35sp">
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardBackgroundColor="@color/red_shade_three"
-                android:layout_marginTop="75sp"
-                android:layout_marginLeft="10sp"
-                android:layout_marginRight="10sp"
-                app:cardCornerRadius="10sp"
-                android:id="@+id/card_permissions">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="0sp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:textColor="@color/white"
-                        android:textSize="15sp"
-                        android:paddingLeft="15sp"
-                        android:paddingTop="5sp"
-                        android:paddingBottom="5sp"
-                        android:text="@string/please_give_permissions"
-                        android:layout_gravity="center_vertical"
-                        tools:ignore="RtlHardcoded,RtlSymmetry" />
-
-                    <ImageButton
-                        android:layout_width="40sp"
-                        android:layout_height="40sp"
-                        android:src="@drawable/baseline_disc_full_black_48"
-                        android:tint="@color/white"
-                        tools:ignore="ContentDescription"
-                        android:background="@color/transparent"
-                        android:padding="5sp"
-                        android:scaleType="centerInside"
-                        android:layout_gravity="center_vertical"/>
-
-                </LinearLayout>
-
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="?attr/actionBarSize"
-                android:layout_marginBottom="?attr/actionBarSize"
-                android:id="@+id/recycler">
-
-            </android.support.v7.widget.RecyclerView>
-
-        </FrameLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="1sp"
-                android:background="@color/colorTextFour"
-                tools:ignore="ContentDescription,SmallSp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="?android:attr/actionBarSize"
-                android:orientation="horizontal"
-                android:background="@color/white">
-
-                <ImageButton
-                    android:layout_width="?android:attr/actionBarSize"
-                    android:layout_height="?android:attr/actionBarSize"
-                    android:background="?android:attr/selectableItemBackground"
-                    tools:ignore="ContentDescription" />
-
-                <TextView
-                    android:layout_width="0sp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:textSize="32sp"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:text="@string/sense_it_all"/>
-
-                <ImageButton
-                    android:layout_width="?android:attr/actionBarSize"
-                    android:layout_height="?android:attr/actionBarSize"
-                    android:background="?android:attr/selectableItemBackground"
-                    tools:ignore="ContentDescription"/>
-
-            </LinearLayout>
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="1sp"
-                android:background="@color/colorTextThree"
-                tools:ignore="ContentDescription,SmallSp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:layout_gravity="bottom"
-            android:orientation="vertical">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="1sp"
-                android:background="@color/colorTextThree"
-                tools:ignore="ContentDescription,SmallSp" />
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardBackgroundColor="@color/colorPrimaryDark">
-
-                <TextSwitcher
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/header_text">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:textColor="@color/white"
-                        android:gravity="center"
-                        android:paddingTop="5sp"
-                        android:paddingBottom="5sp"
-                        android:textSize="20sp"/>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:textColor="@color/white"
-                        android:gravity="center"
-                        android:paddingTop="5sp"
-                        android:paddingBottom="5sp"
-                        android:textSize="20sp"/>
-
-                </TextSwitcher>
-
-            </android.support.v7.widget.CardView>
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="1sp"
-                android:background="@color/colorPrimaryDark"
-                tools:ignore="ContentDescription,SmallSp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="?android:attr/actionBarSize"
-                android:orientation="horizontal">
-
-                <FrameLayout
-                    android:layout_width="0sp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <ImageButton
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:tint="@color/colorPrimaryDark"
-                        android:src="@drawable/baseline_device_unknown_black_48"
-                        android:background="@color/white"
-                        android:scaleType="centerInside"
-                        android:padding="10sp"
-                        tools:ignore="ContentDescription"
-                        android:id="@+id/button_tests_list"/>
-
-                    <ImageView
-                        android:id="@+id/highlight_tests"
-                        android:layout_width="match_parent"
-                        android:layout_height="5sp"
-                        android:layout_gravity="bottom"
-                        tools:ignore="ContentDescription,SmallSp" />
-
-                </FrameLayout>
-
-                <ImageView
-                    android:layout_width="1sp"
-                    android:layout_height="match_parent"
-                    android:background="@color/colorTextFive"
-                    tools:ignore="ContentDescription,SmallSp" />
-
-                <FrameLayout
-                    android:layout_width="0sp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <ImageButton
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:tint="@color/colorPrimaryDark"
-                        android:src="@drawable/baseline_mobile_friendly_black_48"
-                        android:background="@color/white"
-                        android:scaleType="centerInside"
-                        android:padding="10sp"
-                        tools:ignore="ContentDescription"
-                        android:id="@+id/button_sensors_list"/>
-
-                    <ImageView
-                        android:id="@+id/highlight_sensors"
-                        android:layout_width="match_parent"
-                        android:layout_height="5sp"
-                        android:layout_gravity="bottom"
-                        tools:ignore="ContentDescription,SmallSp" />
-
-                </FrameLayout>
-
-                <ImageView
-                    android:layout_width="1sp"
-                    android:layout_height="match_parent"
-                    android:background="@color/colorTextFive"
-                    tools:ignore="ContentDescription,SmallSp" />
-
-                <FrameLayout
-                    android:layout_width="0sp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <ImageButton
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:tint="@color/colorPrimaryDark"
-                        android:src="@drawable/baseline_battery_charging_full_black_48"
-                        android:background="@color/white"
-                        android:scaleType="centerInside"
-                        android:padding="10sp"
-                        tools:ignore="ContentDescription"
-                        android:id="@+id/button_features_list"/>
-
-                    <ImageView
-                        android:id="@+id/highlight_features"
-                        android:layout_width="match_parent"
-                        android:layout_height="5sp"
-                        android:layout_gravity="bottom"
-                        tools:ignore="ContentDescription,SmallSp" />
-
-                </FrameLayout>
-
-                <ImageView
-                    android:layout_width="1sp"
-                    android:layout_height="match_parent"
-                    android:background="@color/colorTextFive"
-                    tools:ignore="ContentDescription,SmallSp" />
-
-                <FrameLayout
-                    android:layout_width="0sp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <ImageButton
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:tint="@color/colorPrimaryDark"
-                        android:src="@drawable/baseline_verified_user_black_48"
-                        android:background="@color/white"
-                        android:scaleType="centerInside"
-                        android:padding="10sp"
-                        tools:ignore="ContentDescription"
-                        android:id="@+id/button_rate_experience"
-                        android:layout_marginBottom="5sp"/>
-
-                    <ImageView
-                        android:id="@+id/highlight_rate"
-                        android:layout_width="match_parent"
-                        android:layout_height="5sp"
-                        android:layout_gravity="bottom"
-                        tools:ignore="ContentDescription,SmallSp" />
-
-                </FrameLayout>
-
-            </LinearLayout>
-
-        </LinearLayout>
+        android:layout_height="match_parent"
+        android:id="@+id/container">
 
     </FrameLayout>
 
